Created blank partials for future functionality and links to thoes partials on the main app

--- a/index.html
+++ b/index.html
@@ -16,16 +16,15 @@
         <a class="navbar-brand" href="#">Music History</a>
       </div>
       <ul class="nav navbar-nav">
-        <li class="navbar-button-style"><a href="#/">View Music</a></li>
-        <li class="navbar-button-style"><a href="#/">Add Music</a></li>
-        <li class="navbar-button-style"><a href="#/">Profile</a></li>
+        <li class="navbar-button-style"><a href="#/view-music">View Music</a></li>
+        <li class="navbar-button-style"><a href="#/add-music">Add Music</a></li>
+        <li class="navbar-button-style"><a href="#/profile">Profile</a></li>
       </ul>
 
   </nav>
 
     <div class="row content-wrapper">
       <section class="sidebar col-md-3">
-        Sidebar
 
         <!-- Song Length Div -->
         <div>
