Users can now add a new song to the firebase database

--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
   <!-- Controllers -->
   <script src="app/controllers/songDetailsController.js"></script>
   <script src="app/controllers/songListController.js"></script>
+  <script src="app/controllers/addSongController.js"></script>
 
 </body>
 </html>
