Displayed songs from firebase on song list partial

--- a/index.html
+++ b/index.html
@@ -35,11 +35,13 @@
         <div>
           Arist:
           <select>
+            Filter by Artist - add ng-model and filter?
             <option>Options</option>
           </select>
         </div>
         <!-- Album Div -->
         <div>
+          Filter by Album - add ng-model and filter?
           Album:
           <select>
             <option>Options</option>
