--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
   </nav>
 
-    <div class="row content-wrapper">
+    <div class="row content-wrapper" ng-controller="SideBarCtrl">
       <section class="sidebar col-md-3">
 
         <!-- Song Length Div -->
@@ -95,6 +95,7 @@
   <script src="app/controllers/songDetailsController.js"></script>
   <script src="app/controllers/songListController.js"></script>
   <script src="app/controllers/addSongController.js"></script>
+  <script src="app/controllers/sideBarController.js"></script>
 
 </body>
 </html>
